commiting new page

--- a/application.json
+++ b/application.json
@@ -37,6 +37,10 @@
     {
       "id": "Gac",
       "isDefault": false
+    },
+    {
+      "id": "Page2",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
