--- a/application.json
+++ b/application.json
@@ -41,6 +41,10 @@
     {
       "id": "Page2",
       "isDefault": false
+    },
+    {
+      "id": "Page3",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
